[package]
name = "balance-checker"
version = "0.1.0"
edition = "2021"

[lib]
name = "balance_checker"
path = "src/lib.rs"

[[bin]]
name = "balance-checker"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
alloy = { version = "0.8", features = ["provider-http", "rpc-client", "rpc-types", "sol-types", "contract"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"

# Solana dependencies
solana-client = "2.1"
solana-sdk = "2.1"
solana-account-decoder = "2.1"
spl-token = "6.0"

[dev-dependencies]
tokio-test = "0.4"
